--- a/Honeycomb Design File for Catan Map/Hexagon.css
+++ b/Honeycomb Design File for Catan Map/Hexagon.css
@@ -6,7 +6,16 @@
 
 #canvas {
     position: relative;
-    background: black;
+    background: darkblue;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+#canvasTest {
+    position: relative;
+    background: darkblue;
     width: 100%;
     height: 100%;
     top: 0;
